--- a/index.html
+++ b/index.html
@@ -10,23 +10,21 @@
 <body>
     <div class="corpo">
   <h1>Sign in</h1>
-    <div>
-        <h2 onclick="aumentaInput()">Username</h2>
+    <div class="login">
+        <h2 class="h2username" onclick="aumentaInput()">Username</h2>
         <input type="text" id="usuario">
     </div>
-    <hr>
-    <div class="password">
-        <h2 onclick="aumentaInputSegundo()" >Password</h2>
+    <div class="login">
+        <h2 class="h2password" onclick="aumentaInputSegundo()" >Password</h2>
         <input type="password" id="senha">
     </div>
     <div class="forgotpassword">
-        <p>Forgot Password</p>
+        <p>Forgot Password?</p>
     </div>
     <div class="signup">
-        <p>signup</p>
+        <p>Signup</p>
     </div>
     <button class="login">Login</button>
-    <button onclick="consulta()">TESTE</button>
 </div>
 <script src="app.js"></script>
 </body>
